--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,76 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:41:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:42:13</td>   <td>29092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.titlecheck()[pri:1, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">titlecheck</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:42:15</td>   <td>30780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:42:16</td>   <td>31610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:42:37</td>   <td>52377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.Logocheck()[pri:2, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">Logocheck</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:42:37</td>   <td>52455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:42:37</td>   <td>53233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:42:59</td>   <td>74322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookamathtutorlearner()[pri:3, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookamathtutorlearner</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:43:05</td>   <td>80725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:43:06</td>   <td>81567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:43:36</td>   <td>111294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookamathtutoracadamic()[pri:4, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookamathtutoracadamic</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:43:41</td>   <td>116877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:43:42</td>   <td>117728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:44:02</td>   <td>137619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicmath()[pri:5, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicmath</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:44:10</td>   <td>145272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:44:10</td>   <td>146070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:44:30</td>   <td>165913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookenglishtutorlearner()[pri:6, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookenglishtutorlearner</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:44:35</td>   <td>171236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:44:36</td>   <td>172037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:44:56</td>   <td>191968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookenglishtutoracadamic()[pri:7, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookenglishtutoracadamic</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:45:00</td>   <td>196214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:45:01</td>   <td>197028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:45:25</td>   <td>220762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicenglish()[pri:8, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicenglish</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:45:33</td>   <td>228386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:45:33</td>   <td>229197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:46:03</td>   <td>258576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookfrenchtutorlearner()[pri:9, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookfrenchtutorlearner</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:46:08</td>   <td>263355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:46:08</td>   <td>264136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:46:29</td>   <td>285189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookefrenchtutoracadamic()[pri:10, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookefrenchtutoracadamic</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:46:35</td>   <td>290445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:46:35</td>   <td>291267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:47:04</td>   <td>319303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicfrench()[pri:11, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicfrench</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:47:12</td>   <td>327386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:47:12</td>   <td>328181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:47:42</td>   <td>357620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.cotactUS()[pri:12, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">cotactUS</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 22:47:47</td>   <td>362278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/20 12:49:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CartTest.setup()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/20 12:50:05</td>   <td>21707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartTest.Checkout()[pri:1, instance:technoTutorsQaTests.CartTest@86be70a]">Checkout</td> 
+  <td>main@1131645570</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/20 12:50:19</td>   <td>35809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CartTest.teardown()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
 </table>
