--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/21 20:36:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartTest.Checkout()[pri:1, instance:technoTutorsQaTests.CartTest@86be70a]">Checkout</td> 
-  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/21 20:35:41</td>   <td>-45198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CartTest.setup()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/21 20:36:55</td>   <td>28727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CartTest.teardown()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/25 17:44:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.logotest()[pri:48, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">logotest</td> 
+  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/25 17:44:28</td>   <td>-17075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/25 17:44:46</td>   <td>729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
 </table>
