--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/25 23:03:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CartTest.setup()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&gt;&gt;setup</td> 
+<tr bgcolor="78a366">  <td>20/03/26 15:55:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CartTest.setup()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/25 23:04:10</td>   <td>24681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartTest.returningstudent()[pri:2, instance:technoTutorsQaTests.CartTest@86be70a]">returningstudent</td> 
+<tr bgcolor="78a366">  <td>20/03/26 15:56:13</td>   <td>22835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartTest.placeOrder()[pri:4, instance:technoTutorsQaTests.CartTest@86be70a]">placeOrder</td> 
   <td>main@1131645570</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/25 23:04:25</td>   <td>39993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CartTest.teardown()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&lt;&lt;teardown</td> 
+<tr bgcolor="78a366">  <td>20/03/26 15:56:27</td>   <td>37014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CartTest.teardown()[pri:0, instance:technoTutorsQaTests.CartTest@86be70a]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@1131645570</td>   <td></td> </tr>
 </table>
